<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:id="@+id/pet_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="61dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/dark_blue_2"
        android:maxLength="22"
        android:text="@string/pet_name"
        android:hint="@string/pet_name_hint"
        android:imeOptions="actionDone"
        android:textSize="28sp"/>
    <RelativeLayout
        android:id="@+id/pet_information"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:clipChildren="false">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="230dp"
            android:layout_centerHorizontal="true">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="35dp"
                android:src="@drawable/pet_shadow"
                android:contentDescription="@string/pet_shadow_description"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/pet"
                android:contentDescription="@string/pet_name"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"/>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true">
                <com.teaml.seacalf.CircularProgressBar
                    android:id="@+id/pet_level_pb"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:max="@integer/current_level_max_progress"
                    app:progress="@integer/current_level_progress"
                    app:backgroundColor="@color/dark_olive"
                    app:progressColor="@color/lime"/>
                <TextView
                    android:id="@+id/pb_level_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textSize="16sp"
                    android:text="@string/level_pb_text"
                    android:textColor="@color/sky_blue"/>
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/inventory_widget"
        android:layout_width="330dp"
        android:layout_height="70dp"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:cardBackgroundColor="@color/dark_blue">
        <Button
            android:id="@+id/button_inventory_open"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="21dp"
            android:paddingEnd="11dp"
            android:background="@color/transparent"
            android:textAllCaps="false"
            android:textAlignment="viewStart"
            android:text="@string/inventory_label"
            android:textColor="@color/sky_blue"
            android:textSize="24sp"
            android:drawableEnd="@drawable/inventory_icon"/>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/shop_widget"
        android:layout_width="330dp"
        android:layout_height="70dp"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:cardBackgroundColor="@color/dark_blue">
        <Button
            android:id="@+id/button_shop_open"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="21dp"
            android:paddingEnd="11dp"
            android:background="@color/transparent"
            android:textAllCaps="false"
            android:textAlignment="viewStart"
            android:text="@string/shop_label"
            android:textColor="@color/sky_blue"
            android:textSize="24sp"
            android:drawableEnd="@drawable/shop_icon"/>
    </androidx.cardview.widget.CardView>
</LinearLayout>