<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/task_dialog"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/sky_blue"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp"
    android:layout_gravity="center">
    <RelativeLayout
        android:layout_width="310dp"
        android:layout_height="405dp"
        android:orientation="vertical">
        <EditText
            android:id="@+id/dialog_edit_text_name"
            android:layout_width="235dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="57dp"
            android:padding="0dp"
            android:textAlignment="center"
            android:hint="@string/dialog_hint_name"
            android:importantForAutofill="no"
            android:inputType="textCapWords|textNoSuggestions"
            android:textColor="@color/dark_blue_2"
            android:textColorHint="@color/dark_blue"
            android:backgroundTint="@color/transparent"
            android:textSize="18sp"
            android:maxLength="20"
            tools:ignore="TouchTargetSizeCheck" />
        <ImageView
            android:id="@+id/create_task_line_1"
            android:layout_width="235dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/dialog_edit_text_name"
            android:layout_centerHorizontal="true"
            android:scaleType="fitXY"
            android:src="@drawable/create_task_dialog_line"/>

        <RelativeLayout
            android:layout_width="235dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/create_task_line_1"
            android:layout_marginTop="57dp"
            android:layout_centerHorizontal="true">
            <TextView
                android:id="@+id/dialog_text_days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/dialog_text_days"
                android:textColor="@color/dark_blue_2"/>
            <EditText
                android:id="@+id/dialog_edit_text_days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="0dp"
                android:paddingBottom="0dp"
                android:layout_toEndOf="@id/dialog_text_days"
                android:textSize="18sp"
                android:textColor="@color/dark_blue_2"
                android:textColorHint="@color/dark_blue"
                android:backgroundTint="@color/transparent"
                android:hint="@string/dialog_hint_days"
                android:inputType="number"
                android:importantForAutofill="no"
                android:maxLength="3"
                tools:ignore="TouchTargetSizeCheck" />
            <ImageView
                android:layout_width="235dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/dialog_edit_text_days"
                android:layout_centerHorizontal="true"
                android:scaleType="fitXY"
                android:src="@drawable/create_task_dialog_line"/>
        </RelativeLayout>

        <Button
            android:id="@+id/negative_button"
            android:layout_width="123dp"
            android:layout_height="52dp"
            android:layout_marginStart="7dp"
            android:layout_marginBottom="7dp"
            android:background="@drawable/negative_button_bg"
            android:text="-"
            android:textSize="36sp"
            android:textColor="@color/sky_blue"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"/>
        <Button
            android:id="@+id/positive_button"
            android:layout_width="123dp"
            android:layout_height="52dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="7dp"
            android:background="@drawable/positive_button_bg"
            android:text="+"
            android:textSize="36sp"
            android:textColor="@color/sky_blue"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>
</androidx.cardview.widget.CardView>